--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ระบบซ่อมบำรุงรถยนต์",
-  "short_name": "Maintenance",
+  "name": "SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์",
+  "short_name": "SC Adventure",
   "start_url": "index.html",
   "display": "standalone",
   "theme_color": "#2563eb",
