--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
   "name": "SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์",
   "short_name": "SC Adventure",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2563eb"
+  "theme_color": "#2563eb",
+  "background_color": "#ffffff"
 }
