--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์",
+  "name": "SC THE ADVENTURE - ระบบซ่อมบำรุง",
   "short_name": "SC Maintenance",
-  "start_url": "./index.html",
+  "start_url": "./vehicle-maintenance.html",
   "display": "standalone",
   "background_color": "#2563eb",
   "theme_color": "#2563eb",
